--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ZenduitProj</title>
+  <title>Zenduit Project</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="http://fonts.cdnfonts.com/css/segoe-ui-4" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=KEY"
+    defer
+  ></script>
 </body>
 </html>
